--- a/whatta-burger/www/css/main.css
+++ b/whatta-burger/www/css/main.css
@@ -2927,7 +2927,7 @@ span.stButton_gradient,
     height:     100%;
     width:      100%;
     background: rgba( 255, 255, 255, .8 )
-                url('../images/loading.gif')
+                url('../img/loading.gif')
                 50% 50%
                 no-repeat;
 }
